Updated with version: 4.27.0 changes

--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "Was gibt es Neues in der letzten Veröffentlichung? Lesen Sie das [[Änderungsprotokoll]]!",
+    "message": "Sie können die neuesten Updates in unserem [changelog] einsehen.",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "Nur Englisch",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "Einen Fehler gefunden?",
+  "needhelp": {
+    "message": "Brauchen Sie Hilfe?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "Möchten Sie sehen, wie AdBlock funktioniert?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Haben Sie eine Frage oder eine neue Idee?",
+  "aboutadblock": {
+    "message": "Über AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "Der Quellcode ist [[frei verfügbar]]!",
+    "message": "Unseren [[source code]] einsehen",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "Es gibt auch eine Seite, damit Sie die [[Menschen hinter AdBlock]] kennenlernen können!",
+    "message": "Mehr über [[our team]] erfahren",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "Hat unser Team Fehlersuchinformationen angefordert? Klicken Sie dazu [[hier]]!",
+    "message": "Hat unser Team Debug-Infos angefordert?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Warum senden Sie uns keinen [[Fehlerbericht]]?",
+    "message": "Uns einen [[bug report]] senden",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "Nehmen Sie über unsere [[Kundendienst-Website]] mit uns Kontakt auf!",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "Wenn Sie eine Werbung sehen, erstellen Sie keinen Fehlerbericht, sondern einen [[Werbungsbericht]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Unser [[Help Center]] besuchen",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Debug-Daten kopieren",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "Kopiert!",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Alle Ressourcen",
@@ -1712,7 +1720,7 @@
     "description": "A resource type"
   },
   "typesub_frame": {
-    "message": "Frame",
+    "message": "Rahmen",
     "description": "A resource type"
   },
   "typemain_frame": {
