--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -1644,7 +1644,7 @@
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Send us a [[bug report]]?",
+    "message": "Send us a [[bug report]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
@@ -1652,7 +1652,7 @@
     "description": "Link to the support site on the Support tab"
   },
   "helpcenter": {
-    "message": "Visit our [[Help Center]]!",
+    "message": "Visit our [[Help Center]]",
     "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
   },
   "copydebugdata": {
@@ -2006,6 +2006,14 @@
   "myadblock_picreplacement_exlained": {
     "message": "Select from the categories below and AdBlock will occasionally replace ads with high-quality images to brighten your day.",
     "description": "The label text for the switch on the MyAdBlock Options page"
+  },
+  "feedback_title": {
+    "message": "Feedback",
+    "description": "Title for feedback call to action."
+  },
+  "feedback_info": {
+    "message": "Have a comment or feature request for us? We’d love to hear from you!",
+    "description": "Text describing the MyAdBlock feedback call to action."
   },
   "myadblock_feedback_title": {
     "message": "We'd love to hear from you!",
