--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "¿Qué novedades hay en la última versión? ¡Échale un vistazo al [[registro de cambios]]!",
+    "message": "Consulta las últimas actualizaciones en nuestro [[changelog]]",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "Solo disponible en inglés",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "¿Has encontrado un error?",
+  "needhelp": {
+    "message": "¿Necesitas ayuda?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "¿Quieres saber cómo funciona AdBlock?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "¿Tienes alguna pregunta o idea nueva?",
+  "aboutadblock": {
+    "message": "Acerca de AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "¡El código fuente está [[disponible gratis]]!",
+    "message": "Consulta nuestro [[source code]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "¡También tenemos una página para ayudarte a encontrar a las [[personas que están detrás de AdBlock]]!",
+    "message": "Obtén más información sobre [[our team]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "¿Nuestro equipo te ha pedido alguna información de depuración? ¡Haz clic [[aquí]] para obtenerla!",
+    "message": "¿Nuestro equipo te ha pedido alguna información de depuración?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "¿Por qué no nos envías un [[informe de error]]?",
+    "message": "Envíanos un [[informe de error]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "¡Háznoslo saber en nuestro [[sitio de soporte]]!",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "Si ves un anuncio, no envíes un informe de error. ¡Envía un [[informe de anuncio]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Visita nuestro [[Centro de Ayuda]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Copiar datos de depuración",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "¡Copiados!",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Todos los recursos",
