--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "Quoi de neuf dans la dernière version ? Consultez le [[journal des modifications]] !",
+    "message": "Voir les dernières mises à jour dans notre [[journal des modifications]]",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "Anglais uniquement",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "Vous avez trouvé un bogue ?",
+  "needhelp": {
+    "message": "Besoin d'aide ?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "Envie de voir ce qui fait avancer AdBlock ?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Vous avez une question, une idée neuve ?",
+  "aboutadblock": {
+    "message": "À propos d'AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "Le code source est [[disponible gratuitement]] !",
+    "message": "Vérifier notre [[code source]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "Nous avons également une page où vous pouvez découvrir les [[gens derrière AdBlock]] !",
+    "message": "En savoir plus sur [[notre équipe]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "Notre équipe demande des infos de débogage ? Cliquez [[ici]] pour répondre !",
+    "message": "Notre équipe demande des infos de débogage ?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Pourquoi ne pas nous envoyer un [[rapport de bogue]] ?",
+    "message": "Nous envoyer un [[rapport de bogue]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "Dites-nous tout sur notre [[site d'assistance]] !",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "Si une publicité s'affiche, ne faites pas de rapport de bogue, [[signalez une publicité]] !",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Visiter notre [[Centre d'aide]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Copier données débogage",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "Copié !",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Toutes les ressources",
@@ -2012,7 +2020,7 @@
     "description": "Text on the MyAdBlock feedback button"
   },
   "error_msg_header": {
-    "message": "Oops !",
+    "message": "Oups !",
     "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
   },
   "error_msg_partI": {
