--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "Quali sono le novità dell'ultima versione? Leggi il [[changelog]]!",
+    "message": "Leggi gli ultimi aggiornamenti nel nostro [[changelog]]",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "Solo in inglese",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "Hai trovato un bug?",
+  "needhelp": {
+    "message": "Hai bisogno di aiuto?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "Vuoi vedere come funziona AdBlock?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Hai una domanda o un suggerimento?",
+  "aboutadblock": {
+    "message": "Info su AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "Il codice sorgente è [[disponibile liberamente]]!",
+    "message": "Consulta il [[codice sorgente]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "Abbiamo anche una pagina per aiutarti a scoprire chi sono le [[persone dietro ad AdBlock]]!",
+    "message": "Trova maggiori informazioni sul [[nostro team]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "La nostra squadra di assistenza ha chiesto delle informazioni di debug? Clicca [[qui]] per trovarle!",
+    "message": "Il nostro team ha richiesto ulteriori informazioni di debug?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Perché non ci invii un [[bug report]]?",
+    "message": "Inviaci un [[bug report]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "Faccelo sapere sul nostro [[sito di assistenza]]!",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "Se vedi questa pubblicità, non segnalare un bug, ma [[segnala una pubblicità]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Visita il nostro [[Help Center]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Copia i dati di debug",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "Copiato!",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Tutte le risorse",
@@ -2012,7 +2020,7 @@
     "description": "Text on the MyAdBlock feedback button"
   },
   "error_msg_header": {
-    "message": "Oops!",
+    "message": "Ops!",
     "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
   },
   "error_msg_partI": {
@@ -2252,7 +2260,7 @@
     "description": "Text on hover of a locked MyAdBlock feature in the MyAdBlock tab of the Options page"
   },
   "myadblock_more_coming_soon": {
-    "message": "Nuove funzioni in arrivo!",
+    "message": "Altre funzioni in arrivo!",
     "description": "Title of the teaser MyAdBlock feature box in the MyAdBlock tab of the Options page"
   },
   "myadblock_benefits_explained": {
