--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "最新リリースの新機能は、[[変更ログ]]を参照してください！",
+    "message": "アップデート内容は [[変更ログ]] で確認できます。",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "英語のみ",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "バグを見つけましたか？",
+  "needhelp": {
+    "message": "お困りですか？",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "AdBlockの原動力は何なのか？",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "新しいアイデアや質問がありますか？",
+  "aboutadblock": {
+    "message": "AdBlockについて",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "ソース コードは [ご自由に利用できます]！",
+    "message": "[[ソースコード]] をご確認ください",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "[[AdBlockの後ろで働く人々]]のことが知れるページも準備しました！",
+    "message": "[[私たちのチーム]] をご紹介します",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "私たちのチームからデバッグに関する情報をリクエストされましたか？[[こちら]]をクリックしてください。",
+    "message": "私たちのチームからデバッグ情報の提供を求められましたか？",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "[[バグの情報]]を送ってくれますか？",
+    "message": "[[バグの報告]] を送信しますか",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "[[サポートサイト]]からお問い合わせ下さい！",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "広告が表示されている場合は、バグの報告ではなく[[広告の報告]]を行って下さい！",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "私たちの [[ヘルプセンター]] をご覧ください",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "デバッグ情報をコピー",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "コピーしました",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "すべてのリソース",
