--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "Wat is er nieuw in de nieuwste release? Bekijk het [[wijzigingenlog]]!",
+    "message": "Bekijk de nieuwste updates in ons [[changelog]]",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "Alleen in het Engels",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "Heb je een bug gevonden?",
+  "needhelp": {
+    "message": "Hulp nodig?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "Wil je zien hoe AdBlock werkt?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Heb je een vraag of een nieuw idee?",
+  "aboutadblock": {
+    "message": "Info over AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "De broncode is [[vrij beschikbaar]]!",
+    "message": "Evalueer onze [[broncode]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "Wij hebben een pagina om je kennis te laten maken met de [[mensen achter AdBlock]]!",
+    "message": "Kom meer te weten over [[ons team]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "Heeft ons team gevraagd om debuginfo? Klik [[hier]]!",
+    "message": "Heeft ons team je om debug-info gevraagd?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Waarom stuur je ons geen [[bugrapport]]?",
+    "message": "Stuur ons een [[bugrapport]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "Laat het ons weten op onze [[ondersteuningssite]]!",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "Als je een advertentie ziet, maak dan geen bugrapport, maak een [[advertentierapport]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Bezoek ons [[hulpcentrum]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Debuggegevens kopiëren",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "Gekopieerd!",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Alle bronnen",
