--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "O que há de novo na versão mais recente? Veja as [[alterações]]!",
+    "message": "Confira as últimas atualizações no nosso [[registro de alterações]]",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "Apenas em Inglês",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "Encontrou um bug?",
+  "needhelp": {
+    "message": "Precisa de ajuda?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "Quer ver como o AdBlock funciona?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Tem alguma dúvida ou uma ideia nova?",
+  "aboutadblock": {
+    "message": "Sobre o AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "O código-fonte é [[disponibilizado gratuitamente]]!",
+    "message": "Revise o nosso [[código-fonte]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "Temos também uma página para que você saiba mais sobre as [[pessoas que criaram o AdBlock]]!",
+    "message": "Saiba mais sobre a [[nossa equipe]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "Nossa equipe solicitou alguma informação de debug? Clique [[aqui]] para cuidar disso!",
+    "message": "Nossa equipe solicitou algum relatório de depuração?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Por que não nos envia um [[relatório de erros]]?",
+    "message": "Envie-nos um [[relatório de depuração]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "Avise-nos no nosso [[site de suporte]]!",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "Se você está vendo um anúncio, não crie um relatório de erro, e sim um [[relatório de anúncio]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Visite a nossa [[Central de Ajuda]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Copiar dados de depuração",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "Copiado!",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Todos os recursos",
