--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "Что нового в последней версии? Смотрите [[журнал изменений]]!",
+    "message": "Посмотреть недавние обновления: [[журнал изменений]]",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "Только на английском языке",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "Нашли ошибку?",
+  "needhelp": {
+    "message": "Нужна помощь?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "Хотите узнать, как работает AdBlock?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Есть вопросы или предложения?",
+  "aboutadblock": {
+    "message": "Об AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "Исходный код в [[свободном доступе]]!",
+    "message": "Посмотреть наш [[исходный код]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "А еще у нас есть страница, на которой вы можете узнать больше о [[команде AdBlock]]!",
+    "message": "Узнать больше: [[наша команда]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "Мы запросили отладочную информацию? Нажмите [[тут]]!",
+    "message": "Служба поддержки запросила данные о поломке?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Почему бы вам не отправить нам [[сообщение об ошибке]]?",
+    "message": "Отправить [[сообщение об ошибке]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "Оставьте сообщение [[нашей поддержке]]!",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "Если вы видите рекламу, то вместо сообщения об ошибке отправьте нам [[жалобу на объявление]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Перейти в [[справочный центр]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Скопировать данные об ошибке",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "Готово!",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Все ресурсы",
