--- a/_locales/sv/messages.json
+++ b/_locales/sv/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "Vad är nytt i den senaste versionen? Se [[ändringsloggen]]!",
+    "message": "Se de senaste uppdateringarna i vår [[changelog]]",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "Endast på engelska",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "Hittat en bugg?",
+  "needhelp": {
+    "message": "Behöver du hjälp?",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "Vill du se vad som finns under huven på AdBlock?",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "Har du en fråga eller en ny idé?",
+  "aboutadblock": {
+    "message": "Om AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "Källkoden är [[fritt tillgänglig]]!",
+    "message": "Granska vår [[källkod]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "Vi har en sida som hjälper dig att lära känna [[människorna bakom AdBlock]] också!",
+    "message": "Lär dig mer om [[vårt team]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "Har vårt team begärt debug-info? Klicka [[här]] för att hitta den!",
+    "message": "Har vårt team efterfrågat avbuggningsinfo?",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "Du kan väl skicka en [[felrapport]] till oss?",
+    "message": "Skicka oss en [[buggrapport]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "Berätta för oss på vår [[supportwebbplats]]!",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "Om du ser en annons, skicka inte en felrapport, skicka en [[annonsrapport]]!",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "Besök vårt [[Hjälpcenter]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "Kopiera avbuggningsdata",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "Kopierad!",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "Alla resurser",
@@ -2012,7 +2020,7 @@
     "description": "Text on the MyAdBlock feedback button"
   },
   "error_msg_header": {
-    "message": "Oops!",
+    "message": "Hoppsan!",
     "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
   },
   "error_msg_partI": {
