--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "最新版本有何新内容？查看[[更新日志]]！",
+    "message": "在我们的 [[changelog]] 中查看最新更新",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "仅英语。",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "发现了问题？",
+  "needhelp": {
+    "message": "需要帮助吗？",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "了解 AdBlock 幕后。",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "有问题或点子？",
+  "aboutadblock": {
+    "message": "关于 AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "源代码是[[免费开放]]的！",
+    "message": "查看我们的[[源代码]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "我们制作了一个页面，帮你了解 [[AdBlock 背后的人]]！",
+    "message": "进一步了解[[我们的团队]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "如果我们的团队希望你提供调试信息，请点击[[这里]]获得！",
+    "message": "我们的团队是否请求获得调试信息？",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "向我们发送[[问题报告]]吧！",
+    "message": "向我们发送[[错误报告]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "访问[[支持网站]]告诉我们！",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "如果你看到了不该显示出来的广告，请不要提交问题报告，而应提交[[广告报告]]！",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "访问我们的[[帮助中心]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "复制调试数据",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "已复制！",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "所有资源",
