--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -1604,15 +1604,15 @@
     "description": "Title of the Support tab of the Options page"
   },
   "whatsnew": {
-    "message": "最新版本中有什麼新內容？請參閱[[變更記錄]]！",
+    "message": "在 [[changelog]] 查看最新更新",
     "description": "Link to display the changelog on the Support tab"
   },
   "englishonly": {
     "message": "只提供英文",
     "description": "Lets the user know that a link/page is only available in English."
   },
-  "foundbug": {
-    "message": "發現了錯誤？",
+  "needhelp": {
+    "message": "需要協助嗎？",
     "description": "Subtitle on the Support tab"
   },
   "adblockupdates": {
@@ -1627,33 +1627,41 @@
     "message": "想知道 AdBlock 是如何運作的嗎？",
     "description": "Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
-  "questionoridea": {
-    "message": "有問題或新想法嗎？",
+  "aboutadblock": {
+    "message": "關於 AdBlock",
     "description": "Subtitle on the Support tab"
   },
   "sourcecode": {
-    "message": "原始程式碼是[[自由使用的]]！",
+    "message": "檢視[[原始程式碼]]",
     "description": "Link to the source code of AdBlock on the Support tab"
   },
   "contributors": {
-    "message": "我們還有一個頁面，可以讓您看到 [[AdBlock 背後的貢獻者]]！",
+    "message": "進一步了解[[我們的團隊]]",
     "description": "Link to the contributors page on the Support tab"
   },
   "debuginfo": {
-    "message": "我們的團隊是否要求偵錯資訊？按一下[[這裡]]。",
+    "message": "我們的團隊是否要求偵錯資訊？",
     "description": "Users can click this link to provide debug information to AdBlock staff"
   },
   "bugreport": {
-    "message": "何不寄一份[[錯誤報告]]給我們？",
+    "message": "向我們傳送[[錯誤報告]]",
     "description": "Link to send a bug report on the Support tab"
   },
   "supportsite": {
     "message": "到我們的[[支援網站]]告訴我們！",
     "description": "Link to the support site on the Support tab"
   },
-  "ad_report_please": {
-    "message": "如果您看到廣告，請不要傳送錯誤報告，請傳送[[廣告報告]]！",
-    "description": "Link to the ad report page on AdBlock's help site. This is found on the Support tab of the options."
+  "helpcenter": {
+    "message": "造訪[[幫助中心]]",
+    "description": "Link to AdBlock's help site. This is found on the Support tab of the options."
+  },
+  "copydebugdata": {
+    "message": "複製偵錯資訊",
+    "description": "Button text on the Support tab of the options."
+  },
+  "copieddebugdata": {
+    "message": "已複製！",
+    "description": "Button text on the Support tab of the options."
   },
   "resourceblocktitle": {
     "message": "所有資源",
@@ -2012,7 +2020,7 @@
     "description": "Text on the MyAdBlock feedback button"
   },
   "error_msg_header": {
-    "message": "Oops!",
+    "message": "糟糕！",
     "description": "DO NOT TRANSLATE The text on the popup menu when an error has occurred"
   },
   "error_msg_partI": {
