--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.28.1, Date: 2021-02-08
+- Updated to ABP Core 3.10.2
+
 Version: 4.27.0, Date: 2021-01-14
 - Updated the Support tab on the AdBlock Options page
 - Fixed an issue with our email address in the popup menu help flow
