--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.28.4, Date: 2021-02-10
+- Fixed an issue with the new build process
+
 Version: 4.28.3, Date: 2021-02-08
 - Updated to ABP Core 3.10.2
 
