--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.28.5, Date: 2021-02-10
+- Added missing entries to the 'no' locale message file
+
 Version: 4.28.4, Date: 2021-02-10
 - Fixed an issue with the new build process
 
