Updated with version: 4.28.6 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.28.6, Date: 2021-02-23
+- Fixed a performance issue with the Stats and data collection functions
+
 Version: 4.28.5, Date: 2021-02-10
 - Added missing entries to the 'no' locale message file
 
