Updated with version: 4.29.1 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.29.1, Date: 2021-02-25
+- Fixed an issue with minimum Firefox version in the manifest file
+
 Version: 4.29.0, Date: 2021-02-24
 - Added a link to the AdBlock ProductBoard page to the AdBlock Options page on the Support tab
 - Fixed an issue when importing rotated images into the custom Image Swap feature
