Updated with version: 4.29.2 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,9 @@
 
 UNRELEASED:
 
+Version: 4.29.2, Date: 2021-02-26
+- Improved a content script related to the manipulation of browser requests
+
 Version: 4.29.1, Date: 2021-02-25
 - Fixed an issue with minimum Firefox version in the manifest file
 
