Updated with version: 4.30.0 changes

--- a/adblock-betafish/CHANGELOG.txt
+++ b/adblock-betafish/CHANGELOG.txt
@@ -2,6 +2,13 @@
 
 UNRELEASED:
 
+Version: 4.30.0, Date: 2021-03-17
+- Updated Translations
+- For AdBlock Premium users, we've added the ability to delete any synchronized devices
+- For AdBlock Premium users, we've improvide the performance of the image swap feature
+- Fixed an issue with new the Gulp build process
+- Enhanced the ability of AdBlock to be tested via automation
+
 Version: 4.29.2, Date: 2021-02-26
 - Improved a content script related to the manipulation of browser requests
 
