--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -489,10 +489,6 @@
     "message": "Indonesian + EasyList",
     "description": "A filter list combined with EasyList"
   },
-  "filtermalware": {
-    "message": "Malware protection",
-    "description": "A filter list"
-  },
   "filterbitcoin_mining_protection": {
     "message": "Cryptocurrency (Bitcoin) Mining Protection List",
     "description": "A filter list"
@@ -604,34 +600,6 @@
   "adreportvoluntary": {
     "message": "Reporting ads is voluntary. It helps other people by enabling the filter list maintainers to block the ad for everyone. If you're not feeling altruistic right now, that's okay. Close this page and [[block the ad]] just for yourself.",
     "description": "Introduction of the ad reporting page"
-  },
-  "malwarenotificationcheckboxmessage": {
-    "message": "Should AdBlock notify you when it detects malware?",
-    "description": "Checkbox displayed when subscribing to the 'Malware protection' filter list on the Filter lists tab of the Options page"
-  },
-  "malwarenotificationmessage": {
-    "message": "AdBlock has blocked a download from a site known to host malware.",
-    "description": "Notification when a potential malware request has been blocked. This message should be under 90 characters!"
-  },
-  "malwarenotificationlearnmore": {
-    "message": "Learn more about malware",
-    "description": "Button on the malware notification that opens a page about malware on the AdBlock website. Message should be under 45 characters!"
-  },
-  "malwarenotificationdisablethesemessages": {
-    "message": "Disable these notifications",
-    "description": "Button on the malware notification to disable future notifications. Message should be under 45 characters!"
-  },
-  "malwarecheck": {
-    "message": "Check for malware that could be injecting ads:",
-    "description": "Section header on the ad report page"
-  },
-  "malwarewarning": {
-    "message": "Your computer may be infected by malware.  Click [[here]] for more information.",
-    "description": "On the ad report page, the ads the user is seeing might be caused by malware/adware"
-  },
-  "malwarenotfound": {
-    "message": "No known malware found.",
-    "description": "On the ad report page, the ads the user is seeing are probably not caused by malware/adware"
   },
   "disableaa": {
     "message": "Check the Acceptable Ads filters:",
@@ -2385,6 +2353,26 @@
     "message": "Please [[update AdBlock]] so we can sync your settings.",
     "description": "button text on the Sync sub-tab of the Options page"
   },
+  "sync_removed_error_msg_part_1": {
+    "message": "This extension is not synced",
+    "description": "sync error message text on the popup menu"
+  },
+  "sync_removed_error_msg_part_2": {
+    "message": "Click here to update your settings",
+    "description": "sync error message text on the popup menu and options page"
+  },
+  "unsync_error_msg_part_1": {
+    "message": "Sync Error",
+    "description": "sync error message text on the options menu"
+  },
+  "unsync_error_msg_part_2": {
+    "message": "This extension is no longer being synced.",
+    "description": "sync error message text on the popup menu"
+  },
+  "unsync_error_msg_part_3": {
+    "message": "Click here to refresh this page, then click \"Add This Extension\" to sync this device",
+    "description": "sync error message text on the Sync tab of the options page"
+  },
   "sync_premium_cta": {
     "message": "You’ll be an ad blocking pro with Premium features like Sync.",
     "description": "AdBlock Premium CTA on the Sync tab"
@@ -2425,9 +2413,17 @@
     "message": "(this extension)",
     "description": "description for name of the current extension"
   },
+  "sync_delete_panel_title": {
+    "message": "Delete Synced Extension",
+    "description": "Panel title text on the delete device overlay"
+  },
   "confirm_delete_extension": {
     "message": "Are you sure you want to delete this extension?",
-    "description": "Warning/confirmation message shown when the user clicks on the delete icon for this extension"
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
+  },
+  "cannot_be_undone": {
+    "message": "This action cannot be undone.",
+    "description": "Warning/confirmation message shown when the user clicks on the delete icon for a device"
   },
   "delete": {
     "message": "Delete",
